# aws-cost-anomalies

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: ANOMALIES.md  SYSTEM_DESIGN.md
scripts/: generate_sample_data.py  query.sh  refresh-data.sh  run-evals.sh
src/aws_cost_anomalies/: __init__.py
src/aws_cost_anomalies/agent/: __init__.py  agent.py  bedrock_client.py  executor.py  mcp_bridge.py  prompts.py  system_prompt.md  tools.py
src/aws_cost_anomalies/analysis/: anomalies.py  attribution.py  comparison.py  drilldown.py  explainer.py  trends.py
src/aws_cost_anomalies/cli/: anomalies.py  app.py  formatting.py  ingest.py  query.py  trends.py
src/aws_cost_anomalies/config/: settings.py
src/aws_cost_anomalies/ingestion/: cost_explorer.py  loader.py  manifest.py  s3_client.py
src/aws_cost_anomalies/nlq/: agent.py  bedrock_client.py  (+4 more)
tests/: conftest.py  test_config.py  test_formatting.py  test_utils.py
tests/fixtures/: sample_manifest.json
tests/test_agent/: eval_fixtures.py  test_agent.py  test_bedrock_client.py  test_evals.py  test_executor.py  test_mcp_bridge.py  test_tools.py
tests/test_analysis/: test_anomalies.py  test_trends.py
tests/test_cli/: test_app.py  test_commands.py
tests/test_ingestion/: test_loader.py  test_manifest.py  test_manifest_edges.py
tests/test_nlq/: eval_fixtures.py  test_agent.py  test_bedrock_client.py  test_evals.py  test_executor.py  test_mcp_bridge.py  test_tools.py
tests/test_storage/: test_database.py  test_schema.py
(+4 files in other folders)
