[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cost-anomalies"
version = "0.1.0"
description = "Detect AWS cost anomalies across root and linked accounts"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "duckdb>=1.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
    "ruff>=0.5",
    "mcp>=1.0",
]

[project.scripts]
aws-cost-anomalies = "aws_cost_anomalies.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aws_cost_anomalies = ["agent/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not evals'"
markers = [
    "evals: agent evals (require Bedrock credentials, call real AWS APIs)",
]
